Stamp filename of source dump at the very top